[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "labelimage-tools"
version = "0.1.2"
description = "Utilities for 2-D labeled tissue segmentation images"
readme = "README-pypi.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
  { name = "zen-lab" },
  { name = "mwappner" },
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
tiff = ["tifffile>=2022.8.12"]
pillow = ["pillow>=9"]
plot = [
  "matplotlib>=3.7",
  "scikit-image>=0.21",
  "networkx>=3.0",
]
graph-standard = ["networkx>=3.0"]
junctions-accelerated = ["numba>=0.57"]
recommended = [
  "tifffile>=2022.8.12",
  "numba>=0.57",
]
all = [
  "tifffile>=2022.8.12",
  "pillow>=9",
  "matplotlib>=3.7",
  "scikit-image>=0.21",
  "networkx>=3.0",
  "numba>=0.57",
]
test = [
  "pytest>=7",
  "tifffile>=2022.8.12",
  "pillow>=9",
  "matplotlib>=3.7",
  "scikit-image>=0.21",
  "networkx>=3.0",
  "numba>=0.57",
]
dev = [
  "pytest>=7",
  "ruff>=0.5",
  "tifffile>=2022.8.12",
  "pillow>=9",
  "matplotlib>=3.7",
  "scikit-image>=0.21",
  "networkx>=3.0",
  "numba>=0.57",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
